target_sources(${PROJECT_NAME} PRIVATE 
	ComponentNames.cpp
	ComponentSerialize.cpp
	ComponentsJson.cpp
	DebugPrinter.cpp
	Environment.cpp
	Factory.cpp
	Fraction.cpp
	InputData.cpp
	Level.cpp
	Main.cpp
	ManAudio.cpp
	ManTex.cpp
	MessageList.cpp
	Polygon.cpp
	Quad.cpp
	QuadDraw.cpp
	SoundRes.cpp
	ViewRenderer.cpp
)
add_subdirectory(systems)
