target_sources(${PROJECT_NAME} PRIVATE 
	ComponentNames.cpp
	ComponentSerialize.cpp
	ComponentsJson.cpp
	DebugPrinter.cpp
	DiceRoll.cpp
	Environment.cpp
	Factory.cpp
	Fraction.cpp
	InputData.cpp
	Level.cpp
	Main.cpp
	ManAudio.cpp
	ManTex.cpp
	MessageList.cpp
	Polygon.cpp
	Quad.cpp
	QuadDraw.cpp
	ResSound.cpp
	ResSprite.cpp
	ViewRenderer.cpp
)
add_subdirectory(systems)
